# CS372Spring2021ExampleCode

./: .gitignore  Armor.cpp  Armor.hpp  CMakeLists.txt  Command.cpp  Command.hpp  Composite.cpp  Composite.hpp  Door.cpp  Door.hpp  Expression.cpp  Expression.hpp  HomeAutomationComponent.cpp  HomeAutomationComponent.hpp  MP3Player.cpp  MP3Player.hpp  MP3PlayerState.cpp  MP3PlayerState.hpp  Observer.cpp  Observer.hpp  StoreByPointer.hpp  StoreByReference.hpp  Subject.cpp  Subject.hpp  Visitor.cpp  Visitor.hpp  catchMain.cpp  main.cpp  modernCPPexamples.cpp  tests.cpp
